--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -149,5 +149,6 @@
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
     <!-- <script src="../../public/js/payment.js"></script> -->
     <script src="../../public/js/present-sitter.js"></script>    
+    <script src="../../public/js/register-baby.js"></script>  
 </body>
 </html>
