--- a/views/html/babiesform.html
+++ b/views/html/babiesform.html
@@ -43,37 +43,57 @@
         .btn-primary:hover {
             background-color: #45a049;
         }
+
+        .notification {
+            display: none;
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #f44336;
+            color: white;
+            padding: 16px;
+            border-radius: 4px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            z-index: 1000;
+        }
+
+        .notification.show {
+            display: block;
+        }
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <!-- <h2 class="header">Adding a Baby</h2> -->
-        <form id="searchBabyForm">
-            <input type="text" class="form-control" id="babyAccess" placeholder="Enter Access Number">
-            <button type="button" class="btn btn-primary" onclick="searchBaby()">Search Baby</button>
-        </form>
-        <br>
-        <form id="registerBabyForm">
-            <input type="text" class="form-control" id="babyname" placeholder="Baby Name">
-            <select class="form-select" id="gender">
-                <option value="">Select Gender</option>
-                <option value="female">Female</option>
-                <option value="male">Male</option>
-            </select>
-            <input type="number" class="form-control" id="age" placeholder="Age">
-            <input type="text" class="form-control" id="location" placeholder="Location">
-            <input type="text" class="form-control" id="nameofguardian" placeholder="Name of Guardian">
-            <input type="time" class="form-control" id="timeOfArrival" placeholder="Time of Arrival">
-            <input type="text" class="form-control" id="nameofparent" placeholder="Name of Parent">
-            <input type="number" class="form-control" id="fee" placeholder="Fee">
-            <select class="form-select" id="sitterAssigned">
-                <option selected>Assign a Sitter</option>
-            </select>
-            <button type="button" class="btn btn-primary" id="registerButton" onclick="registerBaby()">Register Baby</button>
-            <button type="button" class="btn btn-primary" id="updateButton" style="display:none;" onclick="updateBaby()">Update Baby</button>
-        </form>
-    </div>
+  <div class="form-container">
+      <h2 class="header">Adding a Baby</h2>
+      <form id="searchBabyForm">
+          <input type="text" class="form-control" id="babyAccess" placeholder="Enter Access Number">
+          <button type="button" class="btn btn-primary" onclick="searchBaby()">Search Baby</button>
+      </form>
+      <br>
+      <form id="registerBabyForm">
+          <input type="text" class="form-control" id="babyname" placeholder="Baby Name">
+          <select class="form-select" id="gender">
+              <option value="">Select Gender</option>
+              <option value="female">Female</option>
+              <option value="male">Male</option>
+          </select>
+          <input type="number" class="form-control" id="age" placeholder="Age">
+          <input type="text" class="form-control" id="location" placeholder="Location">
+          <input type="text" class="form-control" id="nameofguardian" placeholder="Name of Guardian">
+          <input type="time" class="form-control" id="timeOfArrival" placeholder="Time of Arrival">
+          <input type="text" class="form-control" id="nameofparent" placeholder="Name of Parent">
+          <input type="number" class="form-control" id="fee" placeholder="Fee">
+          <select class="form-select" id="sitterAssigned">
+              <option selected>Assign a Sitter</option>
+          </select>
+          <button type="button" class="btn btn-primary" id="registerButton" onclick="registerBaby()">Register Baby</button>
+          <button type="button" class="btn btn-primary" id="updateButton" style="display:none;" onclick="updateBaby()">Update Baby</button>
+      </form>
+  </div>
 
-    <script src="../../public/js/register-baby.js"></script>
+  <div id="notification" class="notification"></div>
+
+  <script src="../../public/js/register-baby.js"></script>
 </body>
 </html>
