--- a/views/html/login.html
+++ b/views/html/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Log In</title>
   <link href="../../public/css/loginpage.css"  rel="stylesheet"/>
 </head>
 <body>
@@ -16,6 +16,7 @@
     </form>
     <p>Don't have an account? <a href="signup.html">Sign up</a></p> 
     </div>
+    <div id="notification" class="notification"></div>
     <script src="../../public/js/login.js"></script>
 </body>
 </html>
