--- a/views/html/signup.html
+++ b/views/html/signup.html
@@ -23,6 +23,7 @@
   </form>
       <p>Already have an account? <a href="../html/login.html">Login</a></p>
       </div>
+    <div id="notification" class="notification"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="../../public/js/signup.js"></script>
 </body>
