--- a/views/html/babiesform.html
+++ b/views/html/babiesform.html
@@ -6,13 +6,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <title>Register New Baby</title>
     <style>
-        .form-container {
+        /* .form-container {
             width: 80%;
             margin: auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+        } */
         .header {
             text-align: center;
             margin-bottom: 20px;
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2 class="header">Adding a Baby</h2>
+        <!-- <h2 class="header">Adding a Baby</h2> -->
         <form id="searchBabyForm">
             <input type="text" class="form-control" id="babyAccess" placeholder="Enter Access Number">
             <button type="button" class="btn btn-primary" onclick="searchBaby()">Search Baby</button>
