--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -72,82 +71,89 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" id = "nav-text" href="#">Daystar Day Care System</a>
-            <div class="d-flex align-items-center">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+          <a class="navbar-brand" id="nav-text" href="#">Daystar Day Care System</a>
+          <div class="d-flex align-items-center">
               <img id="admin-profile-image" src="../../public/images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
               <span id="admin-name" class="navbar-text"></span>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
           </div>
-        </div>
-    </nav>
+      </div>
+  </nav>
 
-    <div class="d-flex">
-        <div class="bg-light" id="sidebarMenu" style="width: 250px;">
+  <div class="d-flex">
+      <div class="bg-light" id="sidebarMenu" style="width: 250px;">
           <div class="list-group list-group-flush my-3">
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('babiesform.html');" class="list-group-item list-group-item-action bg-light">Register Baby</a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('newSitter.html');" class="list-group-item list-group-item-action bg-light">Register Babysitter</a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('allSeaters.html');" class="list-group-item list-group-item-action bg-light">All Sitters</a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">All Babies</a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('presentSitter.html');" class="list-group-item list-group-item-action bg-light">Daily Payment </a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('procurement.html');" class="list-group-item list-group-item-action bg-light">Procurement Corner</a>
-            <a href="index.html" id = "sidebar-items" class="list-group-item list-group-item-action bg-light">Logout</a>
-        </div>
-        </div>
-       
-    <div class="p-4 w-100" id="main-content">
-      <h1>Welcome to the Admin Dashboard</h1>
-            <div class="Admin-container">
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('babiesform.html');" class="list-group-item list-group-item-action bg-light">Register Baby</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('newSitter.html');" class="list-group-item list-group-item-action bg-light">Register Babysitter</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('allSeaters.html');" class="list-group-item list-group-item-action bg-light">All Sitters</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">All Babies</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('presentSitter.html');" class="list-group-item list-group-item-action bg-light">Daily Payment</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('procurement.html');" class="list-group-item list-group-item-action bg-light">Procurement Corner</a>
+              <a href="index.html" id="sidebar-items" class="list-group-item list-group-item-action bg-light">Logout</a>
+          </div>
+      </div>
+      <div class="p-4 w-100" id="main-content">
+          <h1>Welcome to the Admin Dashboard</h1>
+          <div class="Admin-container">
               <div class="card admin-card" style="width: 18rem;">
-                  <a href="babiesform.html">
+                  <a href="javascript:void(0);" onclick="loadContent('babiesform.html');">
                       <div class="card-body">
                           <span><i class="fa-solid fa-baby my-icon"></i></span>
-                        <h5 class="card-title admin-role">Register Baby</h5>
+                          <h5 class="card-title admin-role">Register Baby</h5>
                       </div>
                   </a>
-                </div>
+              </div>
               <div class="card admin-card" style="width: 18rem;">
-                  <div class="card-body">
-                      <span><i class="fa-solid fa-cart-flatbed  my-icon"></i></span>
-                    <h5 class="card-title admin-role">Register Babysitter</h5>
-                  </div>
-                </div>
+                  <a href="javascript:void(0);" onclick="loadContent('newSitter.html');">
+                      <div class="card-body">
+                          <span><i class="fa-solid fa-cart-flatbed my-icon"></i></span>
+                          <h5 class="card-title admin-role">Register Babysitter</h5>
+                      </div>
+                  </a>
+              </div>
               <div class="card admin-card" style="width: 18rem;">
-                  <div class="card-body">
-                      <span><i class="fa-solid fa-money-check-dollar my-icon"></i></span>
-                    <h5 class="card-title admin-role">Payment Monitor</h5>
-                  </div>
-                </div>
+                  <a href="javascript:void(0);" onclick="loadContent('presentSitter.html');">
+                      <div class="card-body">
+                          <span><i class="fa-solid fa-money-check-dollar my-icon"></i></span>
+                          <h5 class="card-title admin-role">Payment Monitor</h5>
+                      </div>
+                  </a>
+              </div>
           </div>
           <div class="Admin-container">
               <div class="card admin-card" style="width: 18rem;">
-                  <div class="card-body">
-                      <span><i class="fa-solid fa-file-shield my-icon"></i></span>
-                    <h5 class="card-title admin-role">Data Tracker</h5>
-                  </div>
-                </div>
+                  <a href="javascript:void(0);" onclick="loadContent('dataTracker.html');">
+                      <div class="card-body">
+                          <span><i class="fa-solid fa-file-shield my-icon"></i></span>
+                          <h5 class="card-title admin-role">Data Tracker</h5>
+                      </div>
+                  </a>
+              </div>
               <div class="card admin-card" style="width: 18rem;">
-                  <div class="card-body">
-                      <span><i class="fa-solid fa-person-dress my-icon"></i></span>
-                    <h5 class="card-title admin-role">Procurement Corner</h5>
-                  </div>
-                </div>
+                  <a href="javascript:void(0);" onclick="loadContent('procurement.html');">
+                      <div class="card-body">
+                          <span><i class="fa-solid fa-person-dress my-icon"></i></span>
+                          <h5 class="card-title admin-role">Procurement Corner</h5>
+                      </div>
+                  </a>
+              </div>
               <div class="card admin-card" style="width: 18rem;">
-                  <div class="card-body">
-                      <span><i class="fa-solid fa-right-from-bracket my-icon"></i></span>
-                    <h5 class="card-title admin-role">Logout</h5>
-                  </div>
-                </div>
+                  <a href="index.html">
+                      <div class="card-body">
+                          <span><i class="fa-solid fa-right-from-bracket my-icon"></i></span>
+                          <h5 class="card-title admin-role">Logout</h5>
+                      </div>
+                  </a>
+              </div>
           </div>
-         
-        </div>
-    </div> 
+      </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
-    <!-- <script src="../../public/js/payment.js"></script> -->
     <script src="../../public/js/present-sitter.js"></script>    
     <script src="../../public/js/register-baby.js"></script>  
 </body>
