--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -93,8 +93,10 @@
               <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">All Babies</a>
               <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('presentSitter.html');" class="list-group-item list-group-item-action bg-light">Daily Payment</a>
               <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('procurement.html');" class="list-group-item list-group-item-action bg-light">Procurement Corner</a>
+              <a href="javascript:void(0);" id="sidebar-items" onclick="loadContent('signupToken.html');" class="list-group-item list-group-item-action bg-light">Admin signup token</a>
               <a href="index.html" id="sidebar-items" class="list-group-item list-group-item-action bg-light">Logout</a>
           </div>
+          
       </div>
       <div class="p-4 w-100" id="main-content">
           <h1>Welcome to the Admin Dashboard</h1>
