--- a/views/pug/signup.pug
+++ b/views/pug/signup.pug
@@ -30,4 +30,4 @@ section
           a(href='')
             button.btn(type='submit') Signup
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
-script(src='../../public/js/signup.js')
+script(src='../js/signup.js')
